[gd_scene load_steps=5 format=3 uid="uid://bmy7dcvg1ribb"]

[ext_resource type="Texture2D" uid="uid://gt5sh2gfnu8b" path="res://graphics/enemies/scout.png" id="1_mcvck"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_u65um"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fevwm"]
radius = 52.0384

[sub_resource type="CircleShape2D" id="CircleShape2D_qr8j5"]
radius = 1202.21

[node name="Scout" type="CharacterBody2D" groups=["entity", "scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_u65um")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(36, 24)
rotation = 1.5708
texture = ExtResource("1_mcvck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_fevwm")

[node name="Range" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
visible = false
shape = SubResource("CircleShape2D_qr8j5")

[node name="LaserSpawns" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawns"]
position = Vector2(114, -29)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawns"]
position = Vector2(122, 10)

[node name="LaserCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DamagableTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="LaserCooldownTimer" to="." method="_on_laser_cooldown_timer_timeout"]
[connection signal="timeout" from="DamagableTimer" to="." method="_on_damagable_timer_timeout"]
